# HeyMorty

./: .gitignore  CMakeLists.txt  Makefile  README.MD  default.nix  hey_morty  words.txt
.github/workflows/: epita.yml  main.yml
src/: backpropagation.h  layer.c  layer.h  main.c  main.h  neuron.c  neuron.h  string_builder.c  string_builder.h  xor.c
src/assets/: encoded  generate audio.aup3  generate audio.aup3-shm  generate audio.aup3-wal
src/audio/: specto.c  specto.h  wav2.c  wav2.h
src/cmd/: Makefile  execution.c  execution.h  main.c  spell.c  spell.h  spell2.c  spell2.h  spell_check.c  spell_check.h
src/cnn/: Makefile  data.c  data.h  dataset.h  functions.c  functions.h  loss_functions.c  loss_functions.h  mnist_demo.c  neuralnet.c  neuralnet.h  optimizer.c  optimizer.h  tensor.c  tensor.h  trainer.c  trainer.h  training.c  training.h  xor_demo.c
src/neural_network/: cnn.c  cnn.h  layer.c  layer.h  neuron.c  neuron.h  nn.c  nn.h
src/sprec/: flac_encoder.c  flac_encoder.h  recognize.c  recognize.h  sprec.h  wav.c  wav.h  web_client.c  web_client.h
src/ui/: ui.c  ui.h
src/utils/: file.c  file.h  string_builder.c  string_builder.h
